# claude-relay

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  install.sh  package.json  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml
launchd/: com.claude-relay.plist  install.sh  uninstall.sh
src/: bridge.py  setup.js  whatsapp.js
systemd/: claude-relay.service  install.sh  uninstall.sh
tests/: conftest.py  test_bridge.py  test_setup.js  test_whatsapp.js
